--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -3,30 +3,28 @@
     <div class="column">
       <div ng-hide="omnibarVisible" class="content-container page-content-container">
         <div class="inner-page-content-container" scroll-to swiper-prevent>
-          <section>
-            <ul>
-              <li ng-repeat="list in lists">
-                <a href class="click-to-slide" ng-click="gotoList(list)">
-                  <span class="link-title">{{list.title}}</span><span class="icon-arrow-right"></span>
-                </a>
-              </li>
-              <li>
-                <form class="add-element" role="form" name="addListForm" ng-submit="callAndRefresh(addList, newList)" autocapitalize="none" autocorrect="off" add-item>
-                  <div class="form-group" editable-field-container="disable">
-                    <label class="sr-only" for="listTitle">title</label>
-                    <input type="text" id="listTitle" class="simple-input" ng-model="newList.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add list..." editable-field/>
-                  </div>
-                </form>
-              </li>
-              <li ng-if="lists.length === 0">
-                <div class="instruction-text">
-                  <p class="instruction-text-chapter">lists are <b>collections of</b><br/><b>tasks and notes</b><br/><br/>
-                    <span class="instruction-text-chapter-details">(e.g. holiday trip, birthday party,<br/>work, studies etc.)</span>
-                  </p>
+          <ul>
+            <li ng-repeat="list in lists">
+              <a href class="click-to-slide" swiper-click="gotoList(list)">
+                <span class="link-title">{{list.title}}</span><span class="icon-arrow-right"></span>
+              </a>
+            </li>
+            <li>
+              <form class="add-element" role="form" name="addListForm" ng-submit="callAndRefresh(addList, newList)" autocapitalize="none" autocorrect="off" add-item>
+                <div class="form-group" editable-field-container="disable">
+                  <label class="sr-only" for="listTitle">title</label>
+                  <input type="text" id="listTitle" class="simple-input" ng-model="newList.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" placeholder="add list..." editable-field/>
                 </div>
-              </li>
-            </ul>
-          </section>
+              </form>
+            </li>
+            <li ng-if="lists.length === 0">
+              <div class="instruction-text">
+                <p class="instruction-text-chapter">lists are <b>collections of</b><br/><b>tasks and notes</b><br/><br/>
+                  <span class="instruction-text-chapter-details">(e.g. holiday trip, birthday party,<br/>work, studies etc.)</span>
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
