Omnibar item edit/add: Bind item title to omnibarText.title. Reset omnibar item transcend values on cancel.

--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -172,7 +172,7 @@
   </div>
 
   <div class="omnibar-footer small-font">
-    <button type="button" class="button transparent-button omnibar-footer-button-left" ng-click="clearAndHideOmnibar()">cancel</button>
+    <button type="button" class="button transparent-button omnibar-footer-button-left" ng-click="cancelOmnibarEdit()">cancel</button>
     <button type="submit" class="button transparent-button omnibar-footer-button-right" ng-click="saveOmnibarText()" ng-disabled="!addOmniItem.$valid" ng-bind="getOmnibarFooterSaveText()"></button>
   </div>
 
