Added Pikaday Datepicker (https://github.com/dbushell/Pikaday) to project.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -132,6 +132,7 @@
 
     <script src="static/lib/snap.js"></script>
     <script src="static/lib/fastclick.js"></script>
+    <script src="static/lib/pikaday.js"></script>
 
     <script src="test/AppTest.js"></script>
     <script src="test/mock/MockBackendService.js"></script>
