--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -44,6 +44,7 @@
     <script src="static/common/editableFieldContainerDirective.js"></script>
     <script src="static/common/editableFieldDirective.js"></script>
     <script src="static/common/includeReplaceDirective.js"></script>
+    <script src="static/common/pikadayDirective.js"></script>
     <script src="static/common/iscroll-probe.js"></script>
     <script src="static/common/loadingAnimationDirective.js"></script>
     <script src="static/common/optionsDisabledDirective.js"></script>
