--- a/frontend/core/src/main/webapp/static/app/main/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/main/listNotes.html
@@ -1,8 +1,8 @@
 <section id="list-notes" class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible" class="content-container page-content-container">
-      <div class="inner-page-content-container" swiper-prevent>
-        <div scroll-to accordion>
+      <div class="inner-page-content-container" scroll-to swiper-prevent>
+        <div accordion>
           <h3>notes</h3>
           <div ng-repeat="note in notes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
             <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete>
