--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -1,8 +1,8 @@
 <section id="notes-recent" class="two-column-grid page">
   <div class="column">
     <div ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container">
-      <div class="inner-page-content-container" swiper-prevent>
-        <div infinite-scroll="addMoreRecent()" infinite-scroll-parent scroll-to accordion>
+      <div class="inner-page-content-container" scroll-to swiper-prevent>
+        <div infinite-scroll="addMoreRecent()" infinite-scroll-parent accordion>
           <h3>recent</h3>
           <button class="add-button" ng-click="addNote({})">add note...</button>
           <div ng-repeat="note in allNotes | orderBy:'modified':true | limitTo: getRecentNotesLimit()" ng-init="newNote = {}">
