--- a/frontend/core/src/main/webapp/static/app/auth/welcome.html
+++ b/frontend/core/src/main/webapp/static/app/auth/welcome.html
@@ -13,7 +13,7 @@
         <div id="welcome-store-buttons">
           <a href onClick="window.open('http://itunes.com/apps/extendedmind', '_system_')"><img src="/static/img/appstore.png" style="width: 120px;"/><a>&nbsp; &nbsp;<a href onClick="window.open('https://play.google.com/store/apps/details?id=org.extendedmind', '_system_')"><img src="/static/img/playstore.png" style="width: 120px;"/><a>
         </div>
-        <a href ng-hide="true" id="welcome-continue-link" class="highlighted-link" ng-click="gotoTasks()">
+        <a href="#/my" id="welcome-continue-link" class="highlighted-link">
           or try out the pre-beta web app
         </a>
       </div>
