--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -27,9 +27,9 @@
   <div ng-switch-when="task">
     <div class="swiper-no-swiping item-actions"  data-snap-ignore="true" ng-init="openSnooze = {isOpen: false}">
       <div ng-if="openSnooze.isOpen === false" class="form-group item-actions">
-        <span class="simple-input default-element date-input-placeholder" ng-click="openSnooze.isOpen = true" ng-bind="task.date ? task.date : 'select date...'"></span>
+        <a href class="simple-input default-element" ng-click="openSnooze.isOpen = true">select date...</a>
       </div>
-      <div ng-if="openSnooze.isOpen === true" class="item-actions small-font" snooze="task" snooze-selected="initializeTask" snooze-open="openSnooze" snooze-close="false"></div>
+      <div ng-if="openSnooze.isOpen === true" class="item-actions" snooze="task" snooze-selected="initializeTask" snooze-open="openSnooze" snooze-close="false"></div>
       <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
     </div>
     <div class="item-actions">
