--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -11,5 +11,5 @@
       </button>
     </li>
   </ul>
-  <div ng-if="openSnooze.isOpen === true" class="item-actions small-font" snooze="task" snooze-selected="taskQuickEditDone" snooze-open="openSnooze" snooze-close="closeAndCall"></div>
+  <div ng-if="openSnooze.isOpen === true" class="item-actions" snooze="task" snooze-selected="taskQuickEditDone" snooze-open="openSnooze" snooze-close="closeAndCall" snooze-pikaday-has-done-button="true"></div>
 </div>
