--- a/frontend/core/src/main/webapp/static/app/notes/keywords.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keywords.html
@@ -26,11 +26,17 @@
               </div>
             </li>
           </ul>
-          <h3>
-            <a href class="page-header click-to-slide" swiper-click="showNoKeywordDetails()">
+          <h3 class="arrow-link">
+            <a href class="click-to-slide" swiper-click="showNoKeywordDetails()">
               <span class="link-title">no keywords</span><span class="icon-arrow-right"></span>
             </a>
           </h3>
+          <h3 class="arrow-link">
+            <a href class="click-to-slide" swiper-click="showNoListNotesDetails()">
+              <span class="link-title">no list</span><span class="icon-arrow-right"></span>
+            </a>
+          </h3>
+
         </section>
       </div>
     </div>
