--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -26,9 +26,14 @@
               </div>
             </li>
           </ul>
-          <h3>
-            <a href class="page-header click-to-slide" swiper-click="showNoContextDetails()">
+          <h3 class="arrow-link">
+            <a href class="click-to-slide" swiper-click="showNoContextDetails()">
               <span class="link-title">no context</span><span class="icon-arrow-right"></span>
+            </a>
+          </h3>
+          <h3 class="arrow-link">
+            <a href class="click-to-slide" swiper-click="showNoListTasksDetails()">
+              <span class="link-title">no list</span><span class="icon-arrow-right"></span>
             </a>
           </h3>
         </section>
