--- a/frontend/core/src/main/webapp/static/app/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/context.html
@@ -29,9 +29,19 @@
           </div>
           <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
         </div>
-        <div ng-if="!context" accordion>
+        <div ng-if="context === undefined" accordion>
           <h3>no context</h3>
           <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}">
+            <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+            <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+              <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
+            </div>
+          </div>
+          <div ng-include="'static/app/tasks/addTask.html'" include-replace></div>
+        </div>
+        <div ng-if="context === null" accordion>
+          <h3>no list</h3>
+          <div ng-repeat="task in tasks | itemsFilter:{name:'noList'}">
             <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
             <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
