Scroll to active accordion title when pikaday calendar is opened:  * register element to accordionTitle scope
Added missing closing p tag to instruction-text-chapter element
Added vendor prefixes to toaster-animation and pikaday-animation CSS.

--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -29,7 +29,7 @@
       <div ng-if="openSnooze.isOpen === false" class="form-group item-actions">
         <a href class="simple-input default-element" ng-click="openSnooze.isOpen = true">select date...</a>
       </div>
-      <div ng-if="openSnooze.isOpen === true" class="item-actions" snooze="task" snooze-selected="initializeTask" snooze-open="openSnooze" snooze-close="false"></div>
+      <div ng-if="openSnooze.isOpen === true" class="item-actions" snooze="task" snooze-selected="initializeTask" snooze-open="openSnooze" snooze-close="false" snooze-scroll-to-element="scrollToOpenTitle"></div>
       <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
     </div>
     <div class="item-actions">
