--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -18,7 +18,7 @@
           </div>
           <div ng-if="notes.length === 0">
             <div class="instruction-text">
-              <p class="instruction-text-chapter">notes are things you<br/>want to <b>remember</b><br/><br/>
+              <p class="instruction-text-chapter">notes are things you<br/>want to <b>remember</b><br/><br/></p>
             </div>
           </div>
         </div>
