--- a/frontend/core/src/main/webapp/static/app/tasks/snooze.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/snooze.html
@@ -23,7 +23,7 @@
       </li>
       <li class="button-container right-of-three item-actions">
         <div class="form-group">
-          <a href class="highlighted-link" ng-click="openSnooze.pikaday.isVisible = true">set date</a>
+          <a href class="highlighted-link" ng-click="openPikaDayAndScroll()">set date</a>
         </div>
       </li>
     </ul>
