--- a/frontend/core/src/main/webapp/static/app/tasks/timeline.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/timeline.html
@@ -16,13 +16,14 @@
                     <div ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+                        <div item-core-fields="task" item-core-fields-details="itemDetails"></div>
                         <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
                     <div ng-include="'static/app/tasks/addTask.html'"></div>
                     <div ng-if="tasks.length === 0">
                       <div class="instruction-text">
-                        <p class="instruction-text-chapter">tasks are things<br/>you want <b>to do</b><br/><br/>
+                        <p class="instruction-text-chapter">tasks are things<br/>you want <b>to do</b><br/><br/></p>
                       </div>
                     </div>
                   </div>
