--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -32,7 +32,7 @@
           <input type="date" id="taskDue" class="simple-input" ng-model="task.date" ng-click="openSnooze.isOpen=true">
         </div>
         <div ng-if="!task.date" class="item-actions">
-          <a href class="simple-input default-element" ng-click="openSnooze.isOpen=true">select date...</a>
+          <a href class="simple-input default-element date-input-placeholder" ng-click="openSnooze.isOpen = true">select date...</a>
         </div>
       </div>
       <div ng-if="openSnooze.isOpen === true" class="item-actions" snooze="task" snooze-selected="initializeTask" snooze-open="openSnooze" snooze-close="false" snooze-scroll-to-element="scrollToOpenTitle"></div>
