New landing page

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>extended mind</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="em.css"/>
-    <link rel="shortcut icon" href="favicon.ico"/>
-    <script>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="extended mind - next generation productivity">
+  <title>extended mind</title>
+
+  <link rel="stylesheet" href="bootstrap.min.css"/>
+  <link href="custom.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico"/>
+  <script>
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-44203690-1']);
       _gaq.push(['_trackPageview']);
@@ -17,131 +21,170 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-    </script>
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="em-top">
-        <div class="embed-margin">
-          <div class="embed-container">
-            <iframe src="http://fast.wistia.net/embed/iframe/rsul84tim2" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
-          </div>
-        </div>
+  </script>
+</head>
+
+<body>
+
+  <div class="page-header">
+    <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>sign in</b></a>
+  </div>
+
+  <div class="container">
+
+    <div class="row col-md-12 separator-small"></div>
+
+    <div class="row">
+      <div class="col-md-6 col-md-push-6 phone">
+        <img class="hide-mobile" src="img/phone-empty.png"/>
       </div>
-      <div class="em-page">
-        <div class="stich-top"></div>
-        <div class="container">
-          <div class="em-topmargin"></div>
-          <div class="stitch-top"></div>
-          <div class="row">
-            <div class="col-sm-12 em-heading">
-              <h1>simplify your life</h1>
-            </div>
+      <div class="col-md-6 col-md-pull-6 lean-center">
+        <p>
+          <img src="logoname.png"/>
+          <br/>
+          <div class="slogan">
+            <b>next generation</b> productivity
           </div>
-          <div class="row em-input">
-            <div class="em-sign col-sm-12">
-              <h5>sign up for beta:</h5>
-            </div>
-            <div class="col-sm-12 em-email">
-              <form class="form-inline" role="form" id="emailForm">
-                <div class="form-group">
-                  <label class="sr-only" for="email">email address</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="enter email"/>
-                </div>
-                <input id="input" type="submit" name="submit" value="OK" class="btn btn-default" />
-              </form>
-            </div>
-            <div id="result">
-              <div class="alert">
-                &nbsp;
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="em-ingress col-sm-12">
-              <h3>
-              <p>
-                upload your thoughts and tasks into your <b>extended mind</b> so that
-                you can focus your biological mind fully on what you are doing
-              </p>
-              <p>
-                retrieve all your important information in a matter of seconds
-              </p> your extended mind is </h3>
-            </div>
-            <div class="em-sff">
-              <h3>
-              <ul>
-                <li>
-                  simple
-                </li>
-                <li>
-                  fast
-                </li>
-                <li>
-                  focused
-                </li>
-              </ul></p></h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="em-please col-sm-12">
-              <h4>please sign up below and join the exclusive group of early adopters
-              who get the free app when the beta version is launched</h4>
-            </div>
-          </div>
-          <div class="row em-input">
-            <div class="col-sm-12 em-email">
-              <div class="em-sign col-sm-12">
-                <h5>sign up for beta now:</h5>
-              </div>
-              <form class="form-inline" role="form" id="emailFormLower">
-                <div class="form-group">
-                  <label class="sr-only" for="email">email address</label>
-                  <input type="email" class="form-control" id="emailLower" name="email" placeholder="enter email"/>
-                </div>
-                <input id="inputLower" type="submit" name="submit" value="OK" class="btn btn-default" />
-              </form>
-            </div>
-            <div id="resultLower">
-              <div class="alert">
-                &nbsp;
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="em-logo col-sm-12">
-              <img src="logoname.png"/>
-            </div>
-          </div>
-        </div>
+        </p>
+        <p>
+          <a href="https://ext.md/launch" class="button"><span>sign up now</span></a><br/>
+        </p>
+        <p class="first-paragraph">
+          extended mind is a productivity app that helps
+          you manage your tasks and thoughts as easily
+          as if it was an extension to your biological mind.
+        </p>
+        <p>
+          it is <b>simple</b>, <b>focused</b> and <b>fast</b>.
+        </p>
       </div>
     </div>
-    <div class="footer">
-      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="mailto:info@ext.md">contact</a></h5>
-      <br/>
-      <br/>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-5 phone">
+        <img src="img/phone-inbox.png"/>
+      </div>
+      <div class="col-md-7">
+        <h2>simple</h2>
+        <p>manage what you want to do or remember<br/>
+          &hellip;as intuitively as remembering it<br/>
+          &hellip;now, tomorrow or in three years
+        </p>
+        <p class="details">
+          the conscious mind can process only about 40 bits of<br/>
+          information in a second (Zimmermann 1989)
+        </p>
+      </div>
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="em.js"></script>
-    <script>
-		$(document).ready(function() {
-			$('#input').click(function() {
-				return postRequest('emailForm', 'result', 'email');
-			});
-			$('#inputLower').click(function() {
-				return postRequest('emailFormLower', 'resultLower', 'emailLower');
-			});
-		});
-    </script>
-    <script type="text/javascript">
-		setTimeout(function() {
-			var a = document.createElement("script");
-			var b = document.getElementsByTagName("script")[0];
-			a.src = document.location.protocol + "//dnn506yrbagrg.cloudfront.net/pages/scripts/0018/3803.js?" + Math.floor(new Date().getTime() / 3600000);
-			a.async = true;
-			a.type = "text/javascript";
-			b.parentNode.insertBefore(a, b)
-		}, 1);
-    </script>
-  </body>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-5 col-md-push-7 phone">
+        <img src="img/phone-omnibar.png"/>
+      </div>
+
+      <div class="col-md-7 col-md-pull-5 lean-right">
+        <h2>fast</h2>
+        <p>capture what you want to remember<br/>
+          &hellip;instantly as you see or think of it<br/>
+          &hellip;wherever you are, whatever you do
+        </p>
+        <p class="details">
+          the non-conscious mind can  process<br/>
+          11,200,000 bits / s (Zimmermann 1989)
+        </p>
+      </div>
+
+    </div>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-5 phone">
+        <img src="img/phone-snooze.png"/>
+      </div>
+      <div class="col-md-7">
+        <h2>focused</h2>
+        <p>focus on the essential<br/>
+          &hellip;when you want to get things done<br/>
+          &hellip;what you want to remember
+        </p>
+        <p class="details">
+          the mind finds it difficult to reacquire its<br/>
+          focus after having to shift its attention<br/>
+          (Heylighen & Vidal 2008)
+        </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-5 col-md-push-7 phone">
+        <img src="img/phone-tasks.png"/>
+      </div>
+      <div class="col-md-7 col-md-pull-5 lean-right">
+        <h2>tasks</h2>
+        <p>tasks are things you want to do<br/>
+          &hellip;organize by date<br/>
+          &hellip;organize by context<br/>
+          &hellip;organize by list
+        </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-5 phone">
+        <img src="img/phone-notes.png"/>
+      </div>
+      <div class="col-md-7">
+        <h2>notes</h2>
+        <p>notes are things you want to remember<br/>
+          &hellip;organize by topic<br/>
+          &hellip;organize by keyword<br/>
+          &hellip;organize by list
+        </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-5 col-md-push-7 phone">
+        <img src="img/phone-cloud.png"/>
+      </div>
+      <div class="col-md-7 col-md-pull-5 lean-right">
+        <h2>everywhere</h2>
+        <p>your tasks and notes are stored<br/>
+          in the cloud, accessible from<br/>
+          every device, everywhere
+        </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12 separator"></div>
+
+    <div class="row">
+      <div class="col-md-6 col-md-offset-2 lean-center">
+        <h2>science-driven design</h2>
+        <p class="last-paragraph">thousands of research papers used to validate the
+        most focused, intuitive ui and data management
+        practices, <b>designed to integrate the biological
+        and the digital mind</b><br/><br/>
+
+        <a href="https://ext.md/launch" class="button"><span>sign up</span></a><br/>
+        </p>
+      </div>
+    </div>
+
+    <div class="row col-md-12 separator-small"></div>
+
+  </div>
+
+</body>
 </html>
